clusters/pi4-01/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: home-network
  labels:
    goldilocks.fairwinds.com/enabled: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    goldilocks.fairwinds.com/enabled: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    goldilocks.fairwinds.com/enabled: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
    goldilocks.fairwinds.com/enabled: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: external-dns
  labels:
    goldilocks.fairwinds.com/enabled: "true"
